@@ -1,21 +1,23 @@
 # Generated by roxygen2: do not edit by hand
 
-export(bucketexists)
+export(bucket_exists)
 export(bucketlist)
-export(copybucket)
-export(copyobject)
+export(copy_bucket)
+export(copy_object)
+export(delete_bucket)
 export(delete_cors)
 export(delete_lifecycle)
+export(delete_object)
 export(delete_policy)
 export(delete_replication)
 export(delete_tagging)
 export(delete_website)
-export(deletebucket)
-export(deleteobject)
+export(get_bucket)
 export(get_cors)
 export(get_lifecycle)
 export(get_location)
 export(get_notification)
+export(get_object)
 export(get_policy)
 export(get_replication)
 export(get_requestpayment)
@@ -25,20 +27,23 @@ export(get_uploads)
 export(get_versioning)
 export(get_versions)
 export(get_website)
-export(getbucket)
-export(getobject)
-export(headobject)
+export(head_object)
+export(put_bucket)
 export(put_cors)
 export(put_lifecycle)
 export(put_notification)
+export(put_object)
 export(put_policy)
 export(put_requestpayment)
 export(put_tagging)
 export(put_versioning)
 export(put_website)
-export(putbucket)
-export(putobject)
 export(s3HTTP)
 export(s3load)
 export(s3save)
-export(saveobject)
+export(save_object)
+import(aws.signature)
+import(base64enc)
+import(digest)
+import(httr)
+import(xml2)
