@@ -1,0 +1,45 @@
+getobject <- function(...) {
+    warning("'getobject()' is deprecated. Use 'get_object()' instead.")
+    get_object(...)
+}
+saveobject <- function(...) {
+    warning("'saveobject()' is deprecated. Use 'save_object()' instead.")
+    save_object(...)
+}
+
+headobject <- function(...) {
+    warning("'headobject()' is deprecated. Use 'head_object()' instead.")
+    head_object(...)
+}
+copyobject <- function(...) {
+    warning("'copyobject()' is deprecated. Use 'copy_object()' instead.")
+    copy_object(...)
+}
+copybucket <- function(...) {
+    warning("'copybucket()' is deprecated. Use 'copy_bucket()' instead.")
+    copy_bucket(...)
+}
+putbucket <- function(...) {
+    warning("'putbucket()' is deprecated. Use 'put_bucket()' instead.")
+    put_bucket(...)
+}
+putobject <- function(...) {
+    warning("'putobject()' is deprecated. Use 'put_object()' instead.")
+    put_object(...)
+}
+deleteobject <- function(...) {
+    warning("'deleteobject()' is deprecated. Use 'delete_object()' instead.")
+    delete_object(...)
+}
+getbucket <- function(...) {
+    warning("'getbucket()' is deprecated. Use 'get_bucket()' instead.")
+    get_bucket(...)
+}
+deletebucket <- function(...) {
+    warning("'deletebucket()' is deprecated. Use 'delete_bucket()' instead.")
+    delete_bucket(...)
+}
+bucketexists <- function(...) {
+    warning("'bucketexists()' is deprecated. Use 'bucket_exists()' instead.")
+    bucket_exists(...)
+}
