@@ -1,10 +1,10 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/BUCKET.R
-\name{bucketexists}
-\alias{bucketexists}
+\name{bucket_exists}
+\alias{bucket_exists}
 \title{Bucket exists?}
 \usage{
-bucketexists(bucket, ...)
+bucket_exists(bucket, ...)
 }
 \arguments{
 \item{bucket}{Character string with the name of the bucket, or an object of class \dQuote{s3_bucket}.}
