@@ -1,14 +1,14 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/copybucket.R
-\name{copyobject}
-\alias{copybucket}
-\alias{copyobject}
-\title{copyobject}
+\name{copy_object}
+\alias{copy_bucket}
+\alias{copy_object}
+\title{Copy Objects}
 \usage{
-copyobject(from_object, to_object = from_object, from_bucket, to_bucket,
+copy_object(from_object, to_object = from_object, from_bucket, to_bucket,
   headers = list(), ...)
 
-copybucket(from_bucket, to_bucket, ...)
+copy_bucket(from_bucket, to_bucket, ...)
 }
 \arguments{
 \item{from_object}{A character string containing the name the object you want to copy.}
@@ -27,10 +27,10 @@ copybucket(from_bucket, to_bucket, ...)
 Something...
 }
 \description{
-Copy object between S3 buckets
+Copy objects between S3 buckets
 }
 \details{
-\code{copyobject} copies an object from one bucket to another without bringing it into local memory. For \code{copybucket}, all objects from one bucket are copied to another (limit 1000 objects). The same keys are used in the old bucket as in the new bucket.
+\code{copy_object} copies an object from one bucket to another without bringing it into local memory. For \code{copy_bucket}, all objects from one bucket are copied to another (limit 1000 objects). The same keys are used in the old bucket as in the new bucket.
 }
 \references{
 \href{http://docs.aws.amazon.com/AmazonS3/latest/API/RESTObjectCOPY.html}{API Documentation}
