@@ -1,10 +1,10 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/BUCKET.R
-\name{deletebucket}
-\alias{deletebucket}
+\name{delete_bucket}
+\alias{delete_bucket}
 \title{Delete Bucket}
 \usage{
-deletebucket(bucket, ...)
+delete_bucket(bucket, ...)
 }
 \arguments{
 \item{bucket}{Character string with the name of the bucket, or an object of class \dQuote{s3_bucket}.}
