@@ -1,10 +1,10 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/OBJECT.R
-\name{deleteobject}
-\alias{deleteobject}
+\name{delete_object}
+\alias{delete_object}
 \title{Delete object}
 \usage{
-deleteobject(object, bucket, ...)
+delete_object(object, bucket, ...)
 }
 \arguments{
 \item{object}{Character string with the object key, or an object of class \dQuote{s3_object}. In most cases, if \code{object} is specified as the latter, \code{bucket} can be omitted because the bucket name will be extracted from \dQuote{Bucket} slot in \code{object}.}
