@@ -1,10 +1,10 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/BUCKET.R
-\name{getbucket}
-\alias{getbucket}
+\name{get_bucket}
+\alias{get_bucket}
 \title{Get bucket}
 \usage{
-getbucket(bucket, prefix = NULL, delimiter = NULL, max = NULL,
+get_bucket(bucket, prefix = NULL, delimiter = NULL, max = NULL,
   marker = NULL, parse_response = TRUE, ...)
 }
 \arguments{
