@@ -9,7 +9,7 @@ get_location(bucket, ...)
 \arguments{
 \item{bucket}{Character string with the name of the bucket, or an object of class \dQuote{s3_bucket}.}
 
-\item{...}{Additional arguments passed to \code{\link{s3HTTP}}.}
+\item{\dots}{Additional arguments passed to \code{\link{s3HTTP}}.}
 }
 \value{
 A character string containing the region, if one has been set.
