@@ -1,16 +1,16 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/getobject.R
-\name{getobject}
-\alias{getobject}
-\alias{headobject}
-\alias{saveobject}
+\name{get_object}
+\alias{get_object}
+\alias{head_object}
+\alias{save_object}
 \title{Get object}
 \usage{
-getobject(object, bucket, headers = list(), ...)
+get_object(object, bucket, headers = list(), ...)
 
-saveobject(object, bucket, file, headers = list(), ...)
+save_object(object, bucket, file, headers = list(), ...)
 
-headobject(object, bucket, ...)
+head_object(object, bucket, ...)
 }
 \arguments{
 \item{object}{Character string with the object key, or an object of class \dQuote{s3_object}. In most cases, if \code{object} is specified as the latter, \code{bucket} can be omitted because the bucket name will be extracted from \dQuote{Bucket} slot in \code{object}.}
@@ -30,28 +30,28 @@ If \code{file = NULL}, a raw object. Otherwise, a character string containing th
 Retrieve an object from an S3 bucket
 }
 \details{
-\code{getobject} retrieves an object into memory. \code{saveobject} saves an object to a local file. \code{headobject} checks whether an object exists by executing an HTTP HEAD request; this can be useful for checking object headers such as \dQuote{content-length} or \dQuote{content-type}.
+\code{get_object} retrieves an object into memory. \code{save_object} saves an object to a local file. \code{head_object} checks whether an object exists by executing an HTTP HEAD request; this can be useful for checking object headers such as \dQuote{content-length} or \dQuote{content-type}.
 }
 \examples{
 \dontrun{
 # get an object in memory
 ## create bucket
-b <- putbucket("myexamplebucket")
+b <- put_bucket("myexamplebucket")
 ## save a dataset to the bucket
 s3save(mtcars, bucket = b, object = "mtcars")
-obj <- getbucket(b)
+obj <- get_bucket(b)
 ## get the object in memory
-x <- getobject(obj[[1]])
+x <- get_object(obj[[1]])
 load(rawConnection(x))
 "mtcars" \%in\% ls()
 
 # save an object locally
-y <- getobject(obj[[1]], file = object[[1]][["Key"]])
+y <- get_object(obj[[1]], file = object[[1]][["Key"]])
 y \%in\% dir()
 
 # return parts of an object
 ## use 'Range' header to specify bytes
-getobject(object = obj[[1]], headers = list('Range' = 'bytes=1-120'))
+get_object(object = obj[[1]], headers = list('Range' = 'bytes=1-120'))
 }
 }
 \references{
@@ -60,6 +60,6 @@ getobject(object = obj[[1]], headers = list('Range' = 'bytes=1-120'))
 \href{http://docs.aws.amazon.com/AmazonS3/latest/API/RESTObjectHEAD.html}{API Document: HEAD Object}
 }
 \seealso{
-\code{\link{getbucket}}
+\code{\link{get_bucket}}
 }
 
