@@ -1,10 +1,10 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/BUCKET.R
-\name{putbucket}
-\alias{putbucket}
+\name{put_bucket}
+\alias{put_bucket}
 \title{Create bucket}
 \usage{
-putbucket(bucket, ...)
+put_bucket(bucket, ...)
 }
 \arguments{
 \item{bucket}{Character string with the name of the bucket, or an object of class \dQuote{s3_bucket}.}
