@@ -1,10 +1,10 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/OBJECT.R
-\name{putobject}
-\alias{putobject}
+\name{put_object}
+\alias{put_object}
 \title{Put object}
 \usage{
-putobject(file, object, bucket, headers = list(), ...)
+put_object(file, object, bucket, headers = list(), ...)
 }
 \arguments{
 \item{file}{A character string containing the filename (or full path) of 
