@@ -1,5 +1,6 @@
 # CHANGES TO aws.s3 0.1.18 #
 
+* All functions now use snake case (e.g., `get_object()`). Previously available functions that did not conform to this format have been deprecated. They continue to work, but issue a warning. (#28)
 * Separated authenticated and unauthenticated testthat tests, conditional on presence of AWS keys.
 * Numerous documentation fixes and consolidations.
 * Dropped XML dependency in favor of xml2. (#40)
